Add liquid Tags documentation.

--- a/content/index.html
+++ b/content/index.html
@@ -1,7 +1,1 @@
-<div class="container">
-  <div id="content">
-    <div class="row">
-
-    </div>
-  </div>
-</div>
+<h2> About Liquid Themes </h2>
